# projet-cloud-virt

./: README.md
api/: .gitignore  README.md  config.py  pyproject.toml
api/image_api/: storage.py  utils.py  web.py  worker.py
playbook/: .gitignore  gen-names.sh  playbook.yaml  reset.yaml
playbook/group_vars/all/: all.yml  primary.yml  vault  vxlan.yml
playbook/group_vars/gateway/: all.yml  vault
playbook/roles/base/defaults/: main.yml
playbook/roles/base/tasks/: main.yml
playbook/roles/base/vars/: main.yml
playbook/roles/consul/files/: consul.service
playbook/roles/consul/handlers/: main.yml
playbook/roles/consul/tasks/: main.yml  server.yml
playbook/roles/consul/templates/: consul.hcl
playbook/roles/consul/vars/: main.yml
playbook/roles/datadog-conf/tasks/: main.yml
playbook/roles/datadog-conf/templates/: systemd.yaml
playbook/roles/datadog-conf/vars/: main.yml
playbook/roles/docker/handlers/: main.yml
playbook/roles/docker/tasks/: main.yml
playbook/roles/docker/templates/: daemon.json
playbook/roles/instructions/tasks/: main.yml
playbook/roles/instructions/templates/: authorized_keys  list  minio-admin.sh  per-group.md  per-host.md  ssh-config  test-all.sh  zone
playbook/roles/minio/files/: minio.service
playbook/roles/minio/handlers/: main.yml
playbook/roles/minio/tasks/: main.yml
playbook/roles/minio/templates/: env
playbook/roles/multi-consul/files/: consul@.service
playbook/roles/multi-consul/handlers/: main.yml
playbook/roles/multi-consul/tasks/: instance.yml  main.yml
playbook/roles/multi-consul/templates/: consul.hcl  datadog-config.yaml
playbook/roles/multi-nomad/files/: nomad@.service
playbook/roles/multi-nomad/handlers/: main.yml
playbook/roles/multi-nomad/tasks/: instance.yml  main.yml
playbook/roles/multi-nomad/templates/: nomad.hcl
playbook/roles/multi-nomad/vars/: main.yml
playbook/roles/network/defaults/: main.yml
playbook/roles/network/handlers/: main.yml
playbook/roles/network/tasks/: main.yml  network.yaml
playbook/roles/network/templates/: attach-vxlan.conf  hosts  vxlan.netdev  vxlan.network
playbook/roles/network/vars/: main.yml
playbook/roles/nomad/files/: nomad.service
playbook/roles/nomad/handlers/: main.yml
playbook/roles/nomad/tasks/: main.yml  server.yml
playbook/roles/nomad/templates/: nomad.hcl  nomad.service
playbook/roles/nomad/vars/: main.yml
playbook/roles/rabbitmq/files/: datadog-conf.yaml
playbook/roles/rabbitmq/handlers/: main.yml
sujet/: Makefile  README.md  metadata.yaml
terraform/: .gitignore  .terraform.lock.hcl  certificate.tf  data.tf  providers.tf  records.tf  tunnel.tf
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
web/components/: Config.tsx  File.tsx
web/pages/: _app.tsx  index.tsx
web/public/: config.json
web/src/: main.tsx  style.css
web/src/components/: Config.tsx  ConfigContext.tsx  DropZone.tsx
(+7 files in other folders)
