[tool.poetry]
name = "image_api"
description = ""
version = "0.1.0"
authors = ["Quentin Gliech <gliech@unistra.fr>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
boto3 = "^1.34.90"
Flask-Cors = "^4.0.0"
Pillow = "^10.3.0"
celery = {extras = ["amqp", "redis"], version = "^5.4.0"}
opentelemetry-instrumentation-celery = "0.45b0"
opentelemetry-instrumentation-flask = "0.45b0"

[tool.poetry.dev-dependencies]
black = "^24.4.0"
mypy = "^1.9.0"
boto3-stubs = {extras = ["essential"], version = "^1.34.90"}
celery-types = "^0.22.0"
types-Flask-Cors = "^4.0.0"

[tool.poetry.scripts]
app = "image_api.web:dev"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
