[project]
authors = [{ name = "Quentin Gliech", email = "gliech@unistra.fr" }]
requires-python = "<4.0,>=3.9"
dependencies = [
    "Flask<4.0.0,>=3.1.0",
    "boto3<2.0.0,>=1.37.17",
    "Flask-Cors<6.0.0,>=5.0.1",
    "Pillow<12.0.0,>=11.1.0",
    "celery[librabbitmq,redis]<6.0.0,>=5.4.0",
    "opentelemetry-api==1.31.1",
    "opentelemetry-sdk==1.31.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.31.1",
    "opentelemetry-distro==0.52b1",
    "opentelemetry-instrumentation==0.52b1",
    "opentelemetry-instrumentation-system-metrics==0.52b1",
    "opentelemetry-instrumentation-logging==0.52b1",
    "opentelemetry-instrumentation-urllib==0.52b1",
    "opentelemetry-instrumentation-wsgi==0.52b1",
    "opentelemetry-instrumentation-botocore==0.52b1",
    "opentelemetry-instrumentation-celery==0.52b1",
    "opentelemetry-instrumentation-flask==0.52b1",
    "opentelemetry-instrumentation-redis==0.52b1",
    "opentelemetry-instrumentation-urllib3==0.52b1",
]
name = "image_api"
description = "Image resizer API"
version = "0.1.0"

[project.scripts]
image-api = "image_api.web:dev"

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.15.0",
    "boto3-stubs[essential]<2.0.0,>=1.37.17",
    "celery-types<1.0.0,>=0.23.0",
    "types-Flask-Cors<6.0.0,>=5.0.0.20240902",
    "ruff>=0.11.1",
]

[tool.ruff]
src = ["image_api"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
